@@ -1,5 +1,4 @@
 - uid, gid
-- multiple on_connect_send
 - keep invites when detached ?
 - allow global (or per net ?) IP filtering
 - more /bip commands
@@ -23,10 +22,3 @@ Thanks a lot for your help.
 Best regards,
 Whoopie
 --
-Donner des droits plus méchants au log global
-
-DONE:
-
-11:23 < KiBi> Un /away truc chose automatique quand plus aucun client n'est
-              attaché.
-- in english: automatic command when no more client is connected
