@@ -1,3 +1,7 @@
+2006-09-25  Arnaud Cornet <arnaud.cornet@gmail.com>
+
+	* *: Debug no_client_away_msg.
+
 2006-09-23  Arnaud Cornet <arnaud.cornet@gmail.com>
 
 	* src/irc.c: Untested oidentd IPV6 support.
@@ -6,7 +10,7 @@
 
 	* src/bip.c: umask for better permissions when using in system mode.
 	* src/irc.c: added no_client_away_msg configuration directive and
-	code.
+	code as well as support for multiple on_connect_send.
 
 2006-07-02  Arnaud Cornet <arnaud.cornet@gmail.com>
 
